# Weather_Station

./: .gitignore  .gitmodules  README.md  app.js  db.js
Static/: app.js  chart.js  index.html  mongo.js  mqtt.js  server.js  styles.css
embedded/: CMakeLists.txt
embedded/buzzer/: buzzer.cpp  buzzer.h
embedded/mqtt/: mqtt.h
embedded/sensor/: aht20.cpp  aht20.h
embedded/src/: main.cpp
embedded/wifi/: wifi.cpp  wifi.h
public/: charts.html  live.html
public/css/: charts.css  live.css
public/js/: charts.js  live.js
